@@ -55,8 +55,8 @@ dummyscript: dummyscript.in
 
 
 #####   Documentation files   #####
-docdir  = @docdir@
-dist_doc_DATA = tp-dummy.txt tp-dummy.pod 
+pkgdocdir  = @pkgdocdir@
+dist_pkgdoc_DATA = tp-dummy.txt tp-dummy.pod 
 SUFFIXES = .pod .txt
 .pod.txt:
 	pod2text $< $@ 
