@@ -57,7 +57,7 @@ fi
 AC_ARG_VAR(pkghome,   [[PREFIX/torrus] Place for Torrus static files])
 AC_ARG_VAR(pkgbindir,   [[PKGHOME/bin] Torrus executables])
 AC_ARG_VAR(cfgdefdir,   [[PKGHOME/conf_defaults] torrus-config.pl and others])
-AC_ARG_VAR(docdir, [[PKGHOME/doc] Documentation files])
+AC_ARG_VAR(pkgdocdir, [[PKGHOME/doc] Documentation files])
 AC_ARG_VAR(exmpdir, [[PKGHOME/examples] Examples])
 AC_ARG_VAR(perllibdir,  [[PKGHOME/perllib] Torrus Perl libraries])
 AC_ARG_VAR(pluginsdir,   [[PKGHOME/plugins] Plugin configurations])
