@@ -21,6 +21,7 @@
 
 PACKAGE=@PACKAGE@
 prefix=@prefix@
+datarootdir=@datarootdir@
 pkghome=@pkghome@
 exec_prefix=@exec_prefix@
 perllibdir=@perllibdir@
@@ -46,7 +47,7 @@ easytarget_siteconfig_pl=@siteconfdir@/easytarget-siteconfig.pl
     -e "s,\@dbhome\@,@dbhome@,g" \
     -e "s,\@defrrddir\@,@defrrddir@,g" \
     -e "s,\@distxmldir\@,@distxmldir@,g" \
-    -e "s,\@docdir\@,@docdir@,g" \
+    -e "s,\@pkgdocdir\@,@pkgdocdir@,g" \
     -e "s,\@exmpdir\@,@exmpdir@,g" \
     -e "s,\@logdir\@,@logdir@,g" \
     -e "s,\@mandir\@,@mandir@,g" \
