@@ -58,8 +58,8 @@ dist_tmpl_DATA = genrandomcfg.xml
 
 
 #####   Documentation files   #####
-docdir  = @docdir@
-dist_doc_DATA = tp-randomcollector.txt tp-randomcollector.pod 
+pkgdocdir  = @pkgdocdir@
+dist_pkgdoc_DATA = tp-randomcollector.txt tp-randomcollector.pod 
 SUFFIXES = .pod .txt
 .pod.txt:
 	pod2text $< $@ 
